# sui-move-analyzer

./: .gitignore  Cargo.toml  README.md  build.rs  tmp1  wasm-compile.sh
.cargo/: config.toml
.github/workflows/: release.yml
changelog/1.1.8/: changelog.md
docs/: project_context_zh.md  struct_dep_graph_impl_zh.md
editors/code/: .gitignore  .vscodeignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
editors/code/src/: configuration.ts  context.ts  extension.ts  graph_panel.ts  main.ts  reg.ts
editors/code/tests/: ext.test.ts  index.ts  lsp.test.ts
external-crates/move/: Cargo.toml
external-crates/move/crates/move-compiler/src/shared/: ast_debug.rs
external-crates/move/crates/move-package/src/source_package/: manifest_parser.rs
src/: call_flow_graph.rs  code_lens.rs  completion.rs  context.rs  diagnostics.rs  goto_definition.rs  graph_handler.rs  hover.rs  inlay_hints.rs  item.rs  lib.rs  linter.rs  move_generate_spec.rs  move_generate_spec_chen.rs  move_generate_spec_file.rs  move_generate_spec_sel.rs  project.rs  project_context.rs  project_visitor.rs  references.rs  scope.rs  snap_cache.rs  struct_dep_graph.rs  sui_move_analyzer.rs  sui_move_analyzer_beta_2024.rs  symbols.rs  types.rs  utils.rs  vfs.rs
src/alpha-2024/: Cargo.toml
src/alpha-2024/src/: ast_debug.rs  completion.rs  context.rs  goto_definition.rs  hover.rs  inlay_hints.rs  item.rs  lib.rs  linter.rs  move_generate_spec.rs  move_generate_spec_chen.rs  move_generate_spec_file.rs  move_generate_spec_sel.rs  project.rs  project_context.rs  project_visitor.rs  references.rs  sui_move_analyzer_alpha_2024.rs  symbols.rs  syntax.rs
src/beta-2024/: Cargo.toml  build.rs
src/beta-2024/src/: ast_debug.rs  code_lens.rs  completion.rs  context.rs  diagnostics.rs  goto_definition.rs  hover.rs  inlay_hints.rs  item.rs  lib.rs  linter.rs  move_generate_spec.rs  move_generate_spec_chen.rs  move_generate_spec_sel.rs  project.rs  project_context.rs  project_visitor.rs  references.rs  snap_cache.rs  sui_move_analyzer_beta_2024.rs  symbols.rs  syntax.rs  types.rs  utils.rs
src/lastest_implicit_deps/: implicit_deps.rs  mod.rs
src/lastest_implicit_deps/system_packages/: system_packages_version_table.rs
src/message_for_js/: mod.rs  response_type.rs
test/beta_2024/project1/: Move.toml
test/beta_2024/project1/sources/: index_syntax.move  labeled_block_given_to_break_return_valid.move  labeled_control_exp_as_term.move  method_syntax.move  positional_pack_of_positional_struct.move  suiversary.move
test/beta_2024/project2/sources/: index_syntax.move  labeled_block_given_to_break_return_valid.move  labeled_control_exp_as_term.move
tests/: test_goto.rs  test_struct_dep.rs
tests/alpha_2024/nft-protocol/contracts/tests/tests/utils/: utils.from_vec_to_map.move  utils.insert_vec_in_table.move  utils.insert_vec_in_vec_set.move  utils.sum_vector.move  utils.table_from_vec_map.move  utils.table_vec_from_vec.move  utils.vec_map_entries.move  utils.vec_set_from_vec.move
tests/beta_2024/project1/sources/: macro_identifier_assignment.move  nesting_with_phantoms.move.rm  option_enum_match.move.rm  suiversary.move.rm
tests/beta_2024/project2/: Move.toml
tests/beta_2024/project2/sources/: index_syntax.move  macro_identifier_assignment.move  method_syntax.move  positional_pack_of_positional_struct.move
tests/beta_2024/simple/sources/: exap.move  method_syntax.move
tests/bugfix/: Move.toml
tests/bugfix/sources/: issue14.move  keyed_big_vector.move  test_deref_vector.move  test_duplicate_fun_name.move
tests/simple/: Move.toml
