[package]
name = "sui-move-analyzer"
version = "1.5.0"
authors = ["BitsLab.MoveBit"]
description = "A language server for Sui Move"
repository = "https://github.com/movebit/sui-move-analyzer"
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
dirs-next = "2.0.0"
once_cell = "1.7.2"
cfg-if = "1.0.0"
wait-timeout = "0.2.0"
regex = "1.5.5"
bisection = "0.1.0"
codespan = "0.11.1"
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.2"
im = "15.1.0"
lsp-server = "0.7.0"
lsp-types = "0.95.1"
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
url = "2.2.2"
clap = { version = "4.5.41", features = ["derive"] }
crossbeam = "0.8"
walkdir = "2"
log = "0.4.14"
stderrlog = "0.5.4"
enum-iterator = "1.2.0"
stacker = "0.1.15"
vfs = "0.10.0"
bitvec = "1.0.1"   
heck = "0.5.0"
strsim = "0.11.1"
sha2 = "0.9.3"
threadpool = "1.8"   

# different version of sui compliler
move-command-line-common = { path = "external-crates/move/crates/move-command-line-common" }
move-ir-types = { path = "external-crates/move/crates/move-ir-types" }
move-compiler = { path = "external-crates/move/crates/move-compiler" }
move-package = { path = "external-crates/move/crates/move-package" }
move-symbol-pool = { path = "external-crates/move/crates/move-symbol-pool" }
move-core-types = { path = "external-crates/move/crates/move-core-types" }

[build-dependencies]
ureq = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.52"

[[bin]]
name = "sui-move-analyzer"
path = "src/bin/main.rs"
