[package]
name = "beta-2024"
version = "1.1.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "A language server for Move"
repository = "https://github.com/move-language/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
name = "beta_2024"
path = "src/lib.rs"

[dependencies]
dirs-next = "2.0.0"
once_cell = "1.7.2"
cfg-if = "1.0.0"
regex = "1.5.5"
bisection = "0.1.0"
codespan = "0.11.1"
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.2"
im = "15.1.0"
lsp-server = "0.7.0"
lsp-types = "0.94.0"
petgraph = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.16.0"
url = "2.2.2"
clap = { version = "3.1.8", features = ["derive"] }
crossbeam = "0.8"
# move-command-line-common = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-command-line-common" }
# move-ir-types = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-ir-types" }
# move-compiler = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-compiler" }
# move-package = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-package" }
# move-symbol-pool = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-symbol-pool" }
# move-core-types = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-core-types" }
# move-model = { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-model" }
# move-proc-macros= { git = "https://github.com/MystenLabs/sui.git", tag = "devnet-v1.49.0", package = "move-proc-macros" }

move-command-line-common = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-command-line-common" }
move-ir-types = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-ir-types" }
move-compiler = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-compiler" }
move-package = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-package" }
move-symbol-pool = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-symbol-pool" }
move-core-types = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-core-types" }
move-model = { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-model" }
move-proc-macros= { git = "https://github.com/movebit/sui_for_analyzer.git", branch = "sui_move_analyzer", package = "move-proc-macros" }

walkdir = "2"
log = "0.4.14"
stderrlog = "0.5.4"
enum-iterator = "1.2.0"
stacker = "0.1.15"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[dependencies.getrandom_0_2]
package = "getrandom"
version = "0.2.16"
features = ["js"]

[package.metadata.cargo-all-features]
skip_feature_sets = ["getrandom/js"]

[workspace.dependencies]
getrandom = { version = "0.2.16", features = ["js"] }

[patch.crates-io]
named-lock = { git = "https://github.com/hapeeeeee/named-lock", branch = "master" }

[features]
aptos = []
sui = []



