[package]
name = "beta-2024"
version = "1.1.4"
authors = ["Diem Association <opensource@diem.com>"]
description = "A language server for Move"
repository = "https://github.com/move-language/move"
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
name = "beta_2024"
path = "src/lib.rs"

[dependencies]
dirs-next = "2.0.0"
once_cell = "1.7.2"
cfg-if = "1.0.0"
wait-timeout = "0.2.0"
regex = "1.5.5"
bisection = "0.1.0"
codespan = "0.11.1"
anyhow = "1.0.52"
codespan-reporting = "0.11.1"
derivative = "2.2.0"
dunce = "1.0.2"
im = "15.1.0"
lsp-server = "0.7.0"
lsp-types = "0.95.1"
petgraph = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
tempfile = "3.2.0"
url = "2.2.2"
clap = { version = "4.5.41", features = ["derive"] }
crossbeam = "0.8"
vfs = "0.10.0"
threadpool = "1.8"
sha2 = "0.9.3"
walkdir = "2"
log = "0.4.14"
stderrlog = "0.5.4"
enum-iterator = "1.2.0"
stacker = "0.1.15"
bitvec = "0.20.4"   
heck = "0.5.0"
strsim = "0.11.1" 

move-command-line-common = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-command-line-common" }
move-ir-types = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-ir-types" }
move-compiler = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-compiler" }
move-package = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-package" }
move-symbol-pool = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-symbol-pool" }
move-core-types = { git = "https://github.com/movebit/sui_for_analyzer_2025.git", branch = "analyzer", package = "move-core-types" }

[build-dependencies]
ureq = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.52"

[features]
aptos = []
sui = []


